--- a/project1.html
+++ b/project1.html
@@ -19,10 +19,10 @@
                 <h1><span>WNR</span></h1>
             </div>
             <ul class="navigation">
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Explore</li></a>
-                <a href="#"><li>About us</li></a>
-                <a href="#"><li>Support</li></a>
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./project1.html"><li>Explore</li></a>
+                <a href="./about_us.html"><li>About us</li></a>
+                <a href="./support_us.html"><li>Support</li></a>
                 
             </ul>
         </div>
