--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="./form.html">Make a Record</a></li>
                     <li><a href="./about_us.html">About Us</a></li>
                     <li><a href = "./support.html">Support</a></li>
-                    <li><a href="./support.html"></a></li>
+                    <li><a href="./support_us.html"></a></li>
                 </ul> 
             </td>
             <td><button class=firstb>Connect Wallet</button></td>             
