--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="./project1.html">Hall of WNRs</a></li>
                     <li><a href="./form.html">Make a Record</a></li>
                     <li><a href="./about_us.html">About Us</a></li>
-                    <li><a href = "./support.html">Support</a></li>
+                    <li><a href = "./support_us.html">Support</a></li>
                     <li><a href="./support_us.html"></a></li>
                 </ul> 
             </td>
