--- a/about_us.html
+++ b/about_us.html
@@ -24,14 +24,14 @@
     height:auto;
     width:auto;
     background-color: rgba(74, 86, 106, 0.3);
-    border-radius: 
+    border-radius:
     }
     #rcorners1 {
         border-radius: 25px;
         background: #82e607;
-        padding: 20px; 
+        padding: 20px;
         width: auto;
-        height: auto;  
+        height: auto;
         }
     .square {
         height: 430px;
@@ -58,16 +58,16 @@
             <table>
             <tr>
             <td><img src="assets/image/WRN-logos_white.png" height="150" width = "150">
-            <td>
-                <ul> 
+            <td style="display: inline;">
+                <ul>
                     <li><a href="./index.html">Hall of WNRs</a></li>
                     <li><a href="./project1.html">Make a Record</a></li>
                     <li><a href="./about_us.html">About Us</a></li>
                     <li><a href="./support_us.html">support</a></li>
                     <li><a href="support"></a></li>
-                </ul> 
+                </ul>
             </td>
-            <td><button class=firstb>Connect Wallet</button></td>             
+            <td style="width: 10%;"><button >Connect Wallet</button></td>
             </tr>
             </table>
         </nav>
@@ -78,9 +78,17 @@
         <p class = "atext">About US</p>
         <p class="btext">We are a group is students working on j component. We have decided to make this World's Records portal that has many functionalities.
         Here we focus on making NFT of the Achievement from different fields.<br>
+        <br>
+        <br>
+        <br>
         </p>
     </div>
-    
+    <div>
+        <div style="float: rigth; display: inline-block;color: aliceblue;"><p>This is a very good oppurtunity to gain experience and gain all that there is to gain</p></div>
+        <div style="float:left ; display: block;"></div>
+        <img src="./assets/image/vector-illustration-mountain-landscape_1441-71.webp" height="350px" width="450px" style="float: right; margin-left : 600px;">
+    </div>
+
     <footer>
         <section>
             <div class="container">
@@ -89,7 +97,7 @@
                 <p class="ftext"><b style="color:white;"></b>
                 </p>
                 <br>
-            </div> 
+            </div>
         </section>
         <section class="footer-end">
             <div class="container1">
@@ -99,7 +107,7 @@
                          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                     <p>© 2022 VIT J COMPONENT</p>
                 </div>
-            
+
                 <div class="last3">
                    <table class="last2">
                     <tr>
