--- a/support_us.html
+++ b/support_us.html
@@ -123,6 +123,7 @@
             </table>
         </nav>
     </header>
+
         <div class="iwrap"><img src="assets/image/WRN-logos_white.png" alt="lmao" height="150px" width="150"></div>
         <div class="wrap">
             <div class="search">
@@ -132,6 +133,22 @@
               </button>
             </div>
          </div>
+<img src="assets\image\about_us.png" >
+    <div class= "square">
+        <br>
+        <p class = "atext">About US</p>
+        <p class="btext">We are a group is students working on j component. We have decided to make this World's Records portal that has many functionalities.
+        Here we focus on making NFT of the Achievement from different fields.<br>
+        <br>
+        <br>
+        <br>
+        </p>
+    </div>
+    <div>
+        <div style="float: rigth; display: inline-block;color: aliceblue;"><p>This is a very good oppurtunity to gain experience and gain all that there is to gain</p></div>
+        <div style="float:left ; display: block;"></div>
+        <img src="./assets/image/vector-illustration-mountain-landscape_1441-71.webp" height="350px" width="450px" style="float: right; margin-left : 600px;">
+    </div>
         
 
  </body>
